--- a/interface/package.json
+++ b/interface/package.json
@@ -15,7 +15,7 @@
     "mist",
     "web3"
   ],
-  "author": "EtherCore <info@ethercore.org>",
+  "author": "EtherCore <info@ethercore.io>",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/ethercore/desktop-wallet/issues"
